tdf#96246: Make pRenderingArguments nullable

Type gchar* is not nullable by convention.

See:
https://wiki.gnome.org/Projects/GObjectIntrospection/Annotations#Nullable_parameters

Change-Id: Ibfee816a3ef2d29c7376071fb61eda7bf0538efb
Reviewed-on: https://gerrit.libreoffice.org/20425
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit 9e9703389e015d0f3520344715df6719559362e4)